--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@ body {
 
 .head {
     display: flex;
-    align-items: center;
+    align-items: right;
     justify-content: space-between;
-    height: 63px;
+    height: 80px;
     background: #171717;
     position: fixed;
     width: 100%;
@@ -24,8 +24,10 @@ body {
 
 .navbar {
     display: flex;
-    margin-right: 10px;
+    justify-content: center;
+    margin: 10px;
 }
+
 
 .logo {
     margin-left: 30px;
@@ -36,6 +38,7 @@ body {
     color: #fff;
     text-transform: uppercase;
     font-size: 20px;
+
 }
 
 .navbar a {
@@ -47,8 +50,9 @@ body {
     font-size: 20px;
 }
 
+
 .navbar a:hover {
-    background: #3f3f3f;
+    background: #85c2ce;
 }
 
 .header {
@@ -58,24 +62,17 @@ body {
 
 }
 
-.header {
-    height: 60vh !important;
-    background: url(img/header.jpg) no-repeat center;
-    background-size: cover;
-}
-
 .title {
-    margin-bottom: 40px;
+    margin-bottom: 500px;
     font-size: 60px;
     font-weight: 600;
-    text-transform: uppercase;
-    color: #fff;
+    color:#1f1d1d;
 }
 
 p {
     margin-bottom: 40px;
     font-size: 18px;
-    color: #fff;
+    color: #1f1d1d;
     padding: 0 100px;
 }
 
@@ -83,10 +80,10 @@ p {
     display: inline-block;
     margin-top: 15px;
     padding: 10px 40px;
-    border: 2px solid #9c27b0;
-    color: #fff;
+    border: 2px solid #85c2ce;
+    color: #1f1d1d;
     text-decoration: none;
-    background: #9c27b0;
+    background: #85c2ce;
 }
 
 .btn:hover {
@@ -140,8 +137,8 @@ p {
     line-height: 3rem;
     text-align: center;
     border-radius: 50%;
-    color: #fff;
-    background: #9c27b0;
+    color: #3f3f3f;
+    background: #85c2ce;
     font-size: 2rem;
     margin: 1rem 0;
 
@@ -149,48 +146,23 @@ p {
 
 .box-container .box h3 {
     font-size: 20px;
-    color: #9c27b0;
+    color: #85c2ce;
 
 }
 
 .box-container .box p {
     padding: 0 15px;
-    font-size: 16px;
+    font-size: 50px;
 }
 
 .about {
-    background: #171717;
-}
-
-.price {
-    background: url(img/costos.jpg) no-repeat center;
-    background-attachment: fixed;
-    background-size: cover;
-    text-align: center;
+    background: #fff;
 }
 
 
 .contact {
-    padding-top: 20px;
-    background: #171717;
+    padding-top: 250px;
+    background: #fff;
     padding-bottom: 0;
 }
 
-
-@media (max-width: 768px) {
-
-    .title {
-        margin-bottom: 0;
-        font-size: 40px;
-    }
-
-    .sau {
-        height: 100vh;
-    }
-
-    .navbar {
-        display: none;
-    }
-   
-    
-}
